ドキュメントのメンテナンス

--- a/resources/ja/criterions.yml
+++ b/resources/ja/criterions.yml
@@ -24,11 +24,11 @@ criterions:
       低速回線環境の利用者が、画像表示をオフにしていることがあります。適切なaltは、「画像をあえて表示するかどうか」の判断にもなるので、なるべく丁寧にいれてください。
       画像が存在するが、付近に画像と重複する文字列がある場合、altを省略することが有効な場合があります（Aさんの画像があり、その付近に「Aさん」と書いてあるような場合、「Aさん」あるいは「Aさんの画像」といったaltは省略したほうが、スクリーンリーダには読みやすい場合があります）。
       「画像化された文字」と「画像」の判別をつけやすくするため、「写真：XX」というように接頭辞をつけたり「XXの写真」というように説明的なaltを心がけると良いです。たとえば「和菓子」というaltは、「『和菓子』という文字を画像化」したのか、「和菓子の写真」なのか判断を悩ませることがあります。
-      グラフやチャートの画像など複雑な情報を提供している画像については、それが何のグラフやチャートであるかを説明したaltをつけてください（例：「6月、7月、8月の売上のグラフ」）。レベルAでは、グラフの値の詳述は求めませんが、むろん可能な範囲で値の説明もあると良いでしょう。付近にtableでマークアップした表があるのも良いです。
+      グラフやチャートの画像など複雑な情報を提供している画像については、それが何のグラフやチャートであるかを説明したaltをつけてください（例：「6月、7月、8月の売上のグラフ」）。複雑な情報を提供している画像は、まず、その画像を識別できるようにしておくこと必要があります。その上で、付近にtableでマークアップした表や画像の内容を詳述するようにしましょう。
       画像が、リンクやボタンなどの操作の対象である場合は、さらに注意が必要です。丁寧なaltを心がけてください。
-      Google Mapの場合、視覚障害者が扱うことは難しいのですが、「Google Map。ズームや移動ができる地図」と説明をしておくとよいでしょう。
+      Google Mapの場合、視覚障害者が扱うことは難しいのですが、すくなくともiframeのtitle属性で「Google Map」と説明をしておくとよいでしょう。
       地図の画像には、とりあえず「XXの地図」というaltをつけましょう。ただし付近にテキストによる経路説明等があれば、このaltは空にしても致命的なバリアではないでしょう。付近に経路説明等がなく、しかも地図の画像であることを明示していなければ、ひとに尋ねることもできないので、確実にバリアなので修正しましょう。
-      なにかの器具の操作の仕方を説明するgifアニメーションは、視覚障害者にとっては理解が難しいのですが、「器具の操作方法を説明するアニメーション」というような代替テキストをあてることで、機能が説明されたことになり本達成基準を満たします。しかし、結局同じレベルAの、[1.2.1]を満たすことを考えると、できるだけ説明をするように心がけた方が良いでしょう。
+      なにかの器具の操作の仕方を説明するgifアニメーションは、「器具の操作方法を説明するアニメーション」というような代替テキストをあてることで、画像を識別できるようにした上で、本文で機能を詳述すれば、本達成基準を満たします。
       なお「CAPTCHA」「試験目的の画像」など、altには、いくつかの例外があります。くわしくは1.1.1の解説書を呼んでください。
 
   1-2-1: &c1-2-1
@@ -161,13 +161,13 @@ criterions:
       たとえば見出し(<code>&lt;h*&gt;</code>、<code>&lt;th&gt;</code>など)でマークアップすることで、機械可読性が確保され、様々な利用者に対応できるようになります。
       また、「<code>&lt;p&gt;</code>の文字を大きくして見出しとする」、「文字を小さくするために<code>&lt;h6&gt;</code>を使う」などの実装はプログラムによる解釈を阻害するものなので不適合になります。
       プログラムによる解釈を担保した実装をするのが難しい文書の場合、「行頭のアスタリスクは見出しのレベルを表します」「括弧内にお名前を入力してください」といった、テキストによる説明を明示することで達成できますが、原則、HTMLの意味のあるマークアップを優先してください。
-      HTML 4.01 及び XHTML 1.x を含むマークアップ言語の場合、b要素およびi要素は、強調目的の場合はstrong/em要素に置き換えてください。HTML5では、本チェッカーでは、警告を出しません。
+      <!-- HTML 4.01 及び XHTML 1.x を含むマークアップ言語の場合、b要素およびi要素は、強調目的の場合はstrong/em要素に置き換えてください。HTML5では、本チェッカーでは、警告を出しません。 -->
       strike要素、basefont要素、center要素、font要素は、代わりにCSSを用いて構造と表現を分離するようにしてください。sやstrikeの場合はdel要素に置き換えても良いでしょう。
       見出しはh1〜h6が、順序良く降順になっているべきです。h1が大見出し、h2が中見出し、h3が小見出しだとすると、h1のつぎにh3が現れるのは不自然です。
       formを使う時には、labelを使うことで、formのアクセシビリティが向上します。labelは実はHTML4.01では、複数のラベル可能要素を内包しても文法違反ではありませんが、アクセシビリティ・サポーテッドがあまり確かでないので、特に理由がなければ1対1対応にしておいたほうが安全です。
       多くのスクリーンリーダが、input要素等のtitle属性値をラベルとして読み上げますが、labelもtitleも書いている場合は、これを一致させておいたほうが安全です（現時点ではほとんどの場合、titleが優先して読み上げられるようです）。その観点からツールチップ表示を期待したtitle属性に関しては、注意してください。また、ツールチップ表示を期待している場合は、hoverでしか表示しないことが多く、focusでは表示されないことが多いようです。この点にも注意を払っておいてください。
       formを用いる際、placeholder属性値をlabelとして用いることはできません。placeholder属性は入力されると、見えなくなくなるので、使いづらく、また読み上げ対象にならない環境もあります。
-      WAI-ARIA属性のaria-labelとaria-labelledbyの普及も進んでいますが、現時点では、スクリーンリーダのことを考えるとlabel（あるいはtitle）があるほうが安全です。
+      <!-- WAI-ARIA属性のaria-labelとaria-labelledbyの普及も進んでいますが、現時点では、スクリーンリーダのことを考えるとlabel（あるいはtitle）があるほうが安全です。 -->
       form類は、checkboxやradioなどは、labelでマークアップして、関連付けをしてください。こうすることで、スクリーンリーダでは、それぞれの項目がわかりやすくなり、マウスなどのポインティング・デバイスを使いづらい利用者にとっては、クリックしやすくなります。
 
   1-3-2: &c1-3-2
@@ -209,7 +209,7 @@ criterions:
     doc: |
       全盲および色覚異常のある視覚障害者は、色を知覚し判別することができないか、難しい場合があります。色に依存した情報提供を避けましょう。
       たとえば「赤文字の項目は必須です」「カレンダの赤いマスは休日です」というような、必須項目の提供の仕方はNGです。
-      全盲視覚障害者向けには、項目付近に「（必須）」と明示したり、カレンダの休日を別の手段で提供する必要があるでしょう。色覚異常のある利用者に対しては、色だけでなくたとえば「ダイアの形をしたアイコンは休日です」というようにしても、「色の飲みに依存しない情報提供」と言えるでしょう。だたし、ダイアの形にしても、全盲視覚障害者への配慮の必要は残ります。
+      全盲視覚障害者向けには、項目付近に「（必須）」と明示したり、カレンダの休日を別の手段で提供する必要があるでしょう。色覚異常のある利用者に対しては、色だけでなくたとえば「ダイアの形をしたアイコンは休日です」というようにしても、「色のみに依存しない情報提供」と言えるでしょう。だたし、ダイアの形にしても、全盲視覚障害者への配慮の必要は残ります。
       なお、この達成基準は、かならずしも、カレンダの休日を赤で表してはいけないとは<strong>言っていない</strong>ことに注意すべきです。色がわからない人にとっては、きちんとわかるように提供しつつも、色がわかる人がわかりやすいということを妨げる必要はありません。
 
   1-4-2: &c1-4-2
@@ -238,7 +238,7 @@ criterions:
       色覚異常のある利用者、弱視の視覚障害者、高齢者は、文字色と背景色が、近い色でデザインされていると、文字を読みづらくなります。このコントラスト比は、4.5:1を最低限保つ必要がある、とするのが本達成基準です。
       意味のある文字について、前景色と背景色が、明確に異なっているのでなければ、注意をした方が良いです。微妙な箇所については、コントラスト比を計測してください。とくに、本文欄、メニュー類は注意を払う必要があります。コントラスト比のチェックツールはインターネットを検索することで無料のツールを見つけられるでしょう。
       チェック項目の中では、ウェブページ側がコントラストを変更する仕組みを提供していればよい[G174]としていますが、弱視の利用者はそもそもOSレベルで白黒反転をしていることもあり、理想的なのは、十分なコントラストを確保することでしょう。
-      色弱者向けに、特定の色の組み合わせに配慮が必要です。注意すべきなのは、赤と緑、オレンジと黄緑、緑と茶、青と紫、ピンクと白または灰色、緑と灰色・黒、赤と黒、ピンクと青です。
+      色弱者向けに、特定の色の組み合わせに配慮が必要です。<!-- 注意すべきなのは、赤と緑、オレンジと黄緑、緑と茶、青と紫、ピンクと白または灰色、緑と灰色・黒、赤と黒、ピンクと青です。 -->
       なお、たいへん大きな文字や、ロゴ、意味のない文字であれば、コントラストの配慮要件から外れます。たいへん大きな文字とは、Understanding WCAG2.0には、「18ポイント又は太字の14ポイント」程度とあり、これは印刷した場合は、およそ6mm程度の大きさの文字なのですが、ディスプレイにおいては、こういった絶対値は扱いづらいので、注意してください。なお、日本語の場合はそれぞれ太字でなければ22ポイント、太字であれば18ポイントが基準とされています[G18]。大きな文字であれば、コントラスト比は3:1でもよいということになっています。
 
   1-4-4: &c1-4-4
@@ -334,10 +334,9 @@ criterions:
       視覚障害者はマウスポインタを見られないため、マウスを利用できません。また、上肢障害者や肢体不自由の利用者は、身体的理由からマウスなどのポインティングデバイスを利用できない場合があります。こういった利用者はキーボードインタフェースをもちいて、ウェブページを利用します。
       キーボードインタフェースには、ソフトウェアキーボードのように物理的でないキーボードも含みます。重度の身体障害の場合、視線入力やスイッチをもちいて、ソフトウェアキーボードを操作している場合があります。
       こういった利用者への配慮から、ウェブページはキーボードのみで操作できることが望ましいとされています。
-      ただし、文字の手書き入力など、一連の軌跡に依存している場合などは、マウスなどのポインティングデバイスによる操作が前提であるため、本達成基準では例外としています。
+      <!-- ただし、文字の手書き入力など、一連の軌跡に依存している場合などは、マウスなどのポインティングデバイスによる操作が前提であるため、本達成基準では例外としています。 -->
       エンターキーを検知しないJavaScriptのonclick()による実装や、<code>&lt;div&gt;</code>や<code>&lt;span&gt;</code>など、通常フォーカス対象とならない要素を操作対象としている場合にも注意してください。
       ドライビングシミュレータなど、「特定のタイミング」に必然性がある場合は、コンテンツの本質であるといえるでしょう。
-      [1.1.1]では、コントロールを受け取る要素がアクセシブルでない場合、説明を設けることで適合となります。本項の「ドライビングシミュレータ」も、その対象なので、[1.1.1]に準じて、どういったコンポーネントなのか説明を付与するようにしてください。
 
   2-1-2: &c2-1-2
     code: 2-1-2
@@ -378,7 +377,7 @@ criterions:
       全盲、ロービジョン、巧緻性障害、及び、認知能力の低下している利用者などは、制限時間のあるコンテンツをまったく利用できない場合があります。読むのに時間のかかる利用者にとっては、情報がスクロールしたり、自動的に切り替わってしまうと、情報を取得できません。
       コンテンツを操作あるいは読み取るのに必要とする制限時間を解除できるか、制限時間が十分に長い(20時間程度)か、制限時間を10倍以上の長さに設定可能にしてください。ただし、制限時間がコンテンツの必須要件(オークションなど)の場合は除きます。
       動画、音声、カルーセルなどは、制限時間を延長や調整という措置は考えづらいのですが、一時停止と再開ができれば、本達成基準を満たすことになります（[G4]）。なお、カルーセルに関しては、[2.2.2]で類似達成項目があり、利用者が停止できなければ、レベルAが取得できないので、注意してください。
-      利用者の読む時間を制限してしまうため、meta要素のrefreshによるリダイレクト等の指定は、しないようにしてください。
+      利用者の読む時間を制限してしまうため、meta要素のrefreshによるリダイレクト等の秒数指定は、しないようにしてください。
       動画や音声は本質的に「制限時間のあるコンテンツ」ですが、1.2「時間依存メディア」で定められている対応をしていれば、制限時間についての問題にも対応できるといえます。
 
   2-2-2: &c2-2-2
@@ -474,12 +473,12 @@ criterions:
     summary: |
       複数のウェブページ上で繰り返されているコンテンツのブロックをスキップするメカニズムが利用できる。
     doc: |
-      スクリーンリーダを使用している視覚障害者は、すばやく画面を把握することができないため、順繰りに音声で聞いて、ウェブページを利用してます。文字を極端に拡大している利用者も、ページスクロールが増え、目的の場所にたどり着くのに時間を要します。肢体不自由の障害のある利用者は、キーボードインタフェースでしかコンテンツを操作できないため、自在にページ内を移動するのは困難です。こういった利用者への配慮として、「ブロックスキップ」があります。
+      スクリーンリーダを使用している視覚障害者は、すばやく画面を把握することができないため、順繰りに音声で聞いて、ウェブページを利用しています。文字を極端に拡大している利用者も、ページスクロールが増え、目的の場所にたどり着くのに時間を要します。肢体不自由の障害のある利用者は、キーボードインタフェースでしかコンテンツを操作できないため、自在にページ内を移動するのは困難です。こういった利用者への配慮として、「ブロックスキップ」があります。
       ブロックスキップとは、ウェブページ内のなんらかのまとまりを読み飛ばしたり、移動したりすることを指します。
       たとえば、すべてのページに存在するグローバルメニューは、スクリーンリーダ利用者にとっては、なんども同じものを読み上げるため、煩わしい情報提供になりますが、こういった部分をスキップできるようにすることで、情報にアクセスしやすくできます。
       具体的な実装方法としては、[G1]や[H69]があります。
       frame要素やiframe要素はまとめてブロックスキップの対象とすることが可能な場合があります。なんのframe/iframeなのか、title属性できちんと情報提供することでブロックスキップの判断のたすけになります。
-      ブロックスキップ用のリンクは、なにもグローバルメニューや広告領域だけでなく、たとえばたくさんのリンクを延々と読み上げ続けるFacebookのplugin-boxなども、その対象とすると、便利が良いでしょう。
+      ブロックスキップ用のリンクは、なにもグローバルメニューや広告領域だけでなく、たとえばたくさんの情報を延々と読み上げ続けるTwitterやFacebookの埋め込みなども、その対象とすると、便利が良いでしょう。
 
   2-4-2: &c2-4-2
     code: 2-4-2
@@ -544,7 +543,7 @@ criterions:
       見出し及びラベルは、主題又は目的を説明している。
     doc: |
       見出し（<code>&lt;h*&gt;</code>や<code>&lt;th&gt;</code>）及びラベル（<code>&lt;label&gt;</code>やリンク文字列など）は、主題又は目的をわかりやすく説明するようにしてください。ここでは「わかりやすさ」が重要です。
-      見出しはセクションの主題を的確に説明し、ラベルはインタフェースコンポーネントを的確に説明することがもとめられています。なお、[1.3.1]では、見出しが誰にでも見出しとして知覚可能であることが求められ、[3.3.2]では、コンポーネントについてのラベル又は説明の存在を求めている。
+      見出しはセクションの主題を的確に説明し、ラベルはインタフェースコンポーネントを的確に説明することがもとめられています。なお、[1.3.1]では、見出し及びラベルが誰にでも知覚可能であることが求められ、[3.3.2]では、コンポーネントについての可視のラベル又は説明の存在を求めています。
       formのlabelに関しては、たとえば「ふりがな」を要求するような場面で、カタカナかひらがなのいずれかの入力を求める場合は、labelもしくは付近でその説明を行うなどしてください。もし、システム上の制約がないのであれば、カタカナかひらがなかの入力について、両方受け付ける実装を考えてもいいかもしれません。
 
   2-4-7: &c2-4-7
@@ -557,8 +556,7 @@ criterions:
     summary: |
       キーボード操作が可能なあらゆるユーザインタフェースには、フォーカスインジケータが見える操作モードがある。
     doc: |
-      まず[2.1.1]を先に読み、キーボードでの操作を確保することの重要性を確認してください。キーボードでしか操作できない利用者にとって、フォーカスの可視化、操作対象を把握するために非常に重要な役割を果たします。
-      要素とブラウザによっては、フォーカスを受け取っても、デフォルトではフォーカスが可視化されない場合もあります。CSSで明示的にoutlineを付与すると良いでしょう。
+      まず[2.1.1]を先に読み、キーボードでの操作を確保することの重要性を確認してください。キーボードでしか操作できない利用者にとって、フォーカスの可視化は、操作対象を把握するために非常に重要な役割を果たします。
 
   2-4-8: &c2-4-8
     code: 2-4-8
@@ -582,7 +580,7 @@ criterions:
     doc: |
       リンク文字列単独で、リンクの目的を理解できるようにしなければなりません。[2.4.4]と異なるのは文脈依存を許さない点です。[2.4.4]の「書籍」の例を再掲すると、HTML版、PDF版、MP3版はそれぞれ書籍名をリンク文字列内に持っている必要があります。「達成基準 2.4.4 を理解する」のドアの例の方が、理解しやすいかもしれません。
       表題があってリンクされており、すこし紹介文があって、「続きを読む」というようにして、こちらも表題と同じところにリンクする、という実装はしばしばあります。この場合、「続きを読む」は、単独で理解可能なリンクとは言えません（ちなみに[2.4.4]では許容されます）。「続きを読む」を「{表題}の続きを読む」と記述すれば、「単独での理解が可能」なので、2.4.9は満たせます。しかし、スクリーンリーダーで、タブでリンクへとスキップしながら読んでいると似たような機能を連続して読み上げることになり少々煩わしくもあります。この場合「続きを読む」（もしくは「{表題}の続きを読む」）を、<code>aria-hidden="true"</code>や<code>tabindex="-1"</code>などして、読まないようにすると、タブキー押下の数が減って、音声環境での利用が快適になります。
-      ちなみに[3.2.4]では、「同じ機能を有するコンポーネントは一貫して識別できる」ことを求めていて、たとえばサイトのお問い合わせフォームへのリンクが「お問い合わせフォーム」だったり「お問い合わせはこちらから」だったりして統一されていないことを禁じています（つまり「お問い合わせフォーム」か「お問い合わせはこちらから」に一貫せよと言っています）。本達成基準としては、リンクの目的を理解するということは妨げていないと考えられますが、ただリンクの文字列が理解可能であっても、表記の揺れが利用者を不安にすることがあるかもしれない、ということは意識する必要があるでしょう。
+      ちなみに[3.2.4]では、「同じ機能を有するコンポーネントは一貫して識別できる」ことを求めていて、たとえばサイトのお問い合わせフォームへのリンクが「お問い合わせフォーム」だったり「お問い合わせはこちらから」だったりして統一されていないことを禁じています（つまり「お問い合わせフォーム」か「お問い合わせはこちらから」に一貫せよと言っています）。本達成基準としては、リンクの目的を理解するということは妨げていないと考えられますが、ただリンクの文字列が理解可能であっても、表記の揺れが利用者の利便性を損なうことがあるかもしれない、ということは意識する必要があるでしょう。
 
   2-4-10: &c2-4-10
     code: 2-4-10
@@ -606,9 +604,8 @@ criterions:
     summary: |
       それぞれのウェブページのデフォルトの自然言語がどの言語であるか、プログラムによる解釈が可能である。
     doc: |
-      HTMLのlangの指定で<code>&lt;html lang="ja"&gt;</code>のように、ウェブページのデフォルトの言語を指定しておくことで、ユーザエージェントや支援技術がコンテンツを正しく解釈することができるようになります（といいつつ、日本語スクリーンリーダ環境での、アクセシビリティ・サポーテッド状況はあまり芳しくない。iPhone+VoiceOverはきちんと反応するようです）。
+      HTMLのlangの指定で<code>&lt;html lang="ja"&gt;</code>のように、ウェブページのデフォルトの言語を指定しておくことで、ユーザエージェントや支援技術がコンテンツを正しく解釈することができるようになります。
       多言語サイト構築の際など、ついこれを忘れて英語ページでもjaとしてしまうことがあるので要注意です。
-      また単一のページ内で多言語が混在する場合は、[3.1.2]にも配慮することが強く推奨されています。
 
   3-1-2: &c3-1-2
     code: 3-1-2
@@ -633,7 +630,6 @@ criterions:
       慣用句及び専門用語を含めて、一般的ではない、又は限定された用法で使われている単語、又は語句の、明確な定義を特定するメカニズムが利用できる。
     doc: |
       一般的でない難しい用語（技術語、業界用語、言語特有の慣用句、リート語）は、その定義を参照できるようになっていることが望ましいです。Understandingの例では、「匙を投げる」が「スプーンを投げる」という意味でない事例を挙げていますが、こういった言葉に逐一注釈をしていくというよりも、そもそも難しい言葉を避けるという対応が求められていると考えたほうがシンプルかもしれません。
-      ちなみに「リート語」とは英語圏のインターネットスラングで、「Leet」と表記しますが、これ自体「1337」というリート語表現があります。
 
   3-1-4: &c3-1-4
     code: 3-1-4
@@ -645,8 +641,6 @@ criterions:
       略語の元の語、又は意味を特定するメカニズムが利用できる。
     doc: |
       コンテンツ内に略語がある場合は、略語の元の語あるいは意味を知ることができようにしましょう。[3.1.3]とも関係があると言えます。
-      HTML4.01には<code>&lt;abbr&gt;</code>（略語。e.g. XML, HTML）、<code>&lt;acronym&gt;</code>（頭字語。e.g. LAN, NATO）というタグがあり、それぞれ略語をマークアップし、title属性で略語展開したものを意味づけする仕様がありますが、ややアクセシビリティ・サポーテッド状況が怪しいので、要注意です。
-      HTML5では、<code>&lt;acronym&gt;</code>は廃止されました。<code>&lt;abbr&gt;</code>でマークアップしましょう。
 
   3-1-5: &c3-1-5
     code: 3-1-5
@@ -658,7 +652,7 @@ criterions:
       固有名詞や題名を取り除いた状態で、テキストが前期中等教育レベルを超えた読解力を必要とする場合は、補足コンテンツ又は前期中等教育レベルを超えた読解力を必要としない版が利用できる。
     doc: |
       コンテンツが前期中等教育レベル（UNESCO基準、9年間の教育を受けたもの、なので、中学校3年生程度）の読解力で読めるようにしましょう。それを超える読解レベルを求めるときには、前期中等教育レベルの読解力で理解できる補足的コンテンツまたはバージョンを用意してください。
-      なお、どうやって前期中等教育レベルかどうかを判定するかですが、Understandingによれば、だいたいどの国にも判定計算式があるからそれを利用したらいいとなっています。しかし、日本語には、そのものズバリのものは今の所ない様子（インターネット上に研究の残滓は散見されます）。面白い試みとしては、日本語文章難易度判別システム（http://jreadability.net）があり、おそらくここで示されている「中級前半」程度であれば、ほどよろしいかとおもわれますが、これは利用規約によれば「教育・研究目的のみ」で許容されているようなので、商用利用は望めないでしょう。
+      なお、どうやって前期中等教育レベルかどうかを判定するかですが、Understandingによれば、だいたいどの国にも判定計算式があるからそれを利用したらいいとなっています。しかし、日本語には、そのものズバリのものは今の所ない様子（インターネット上に研究の残滓は散見されます）。面白い試みとしては、<a href="https://jreadability.net">日本語の学習者と教師のためのWebシステム</a>があり、おそらくここで示されている「中級前半」程度であれば、ほどよろしいかとおもわれますが、これは利用規約によれば「教育・研究目的のみ」で許容されているようなので、商用利用は望めないでしょう。
 
   3-1-6: &c3-1-6
     code: 3-1-6
@@ -695,7 +689,7 @@ criterions:
       ユーザインタフェースコンポーネントの設定を変更することが、コンテキストの変化を自動的に引き起こさない。ただし、利用者が使用する前にその挙動を知らせてある場合を除く。
     doc: |
       ページ内の入力欄全てを入力したら自動的に送信するとか、チェックボックスやラジオボタンをチェックしたらページ移動するとか、そういったことをしてはいけません。
-      時々あるのは、selectのonchangeを拾ってページ移動するようなインタフェースです。マウスで操作している利用者にとっては、selectの3項目下を選択するというようなことができるのですが、キーボードの場合は、下キーを押した途端にonchange判定されてしまって、永遠に2個下に行けない、ということが起こる（ある意味「キーボードトラップ」になっているとも言えるでしょう）場合があります。こういった場合は、「実行ボタン」を付与する必要があるでしょう。
+      時々あるのは、selectのonchangeを拾ってページ移動するようなインタフェースです。マウスで操作している利用者にとっては、selectの3項目下を選択するというようなことができるのですが、キーボードの場合は、下キーを押した途端にonchange判定されてしまって、永遠に2個下に行けない、ということが起こる（ある意味「キーボードトラップ」になっているとも言えるでしょう）場合があります。こういった場合は、「実行ボタン」を付与する必要があるでしょう（ただし最近のUAではselectでスペースキーを押すことで、候補を展開できることがあるので、判断が分かれることがあります）。
       この達成基準は[3.2.1]と似ていますが、状況の変化が予測可能で、制御可能であれば、許されることもあるという点で違います（フォーカスの場合は、予測や制御が本質的に難しい）。たとえばカレンダに予定を追加するフォームがある時、予定の種別をラジオボタンで選択すると、入力欄が動的に変化するような仕掛けは、予測可能で制御可能であると言えるでしょう。
       また、クレジットカード番号など4桁ずつ入力する際、4文字入力したら次のフィールドに自動的にフォーカスを映すような挙動も、あらかじめ説明されている場合は許容されます。
 
@@ -721,7 +715,7 @@ criterions:
     summary: |
       ウェブページ一式の中で同じ機能を有するコンポーネントは、一貫して識別できる。
     doc: |
-      同じ機能を提供するリンクやボタンなどはウェブページ一式の中で一貫している必要があります。この達成基準は結構見落としやすいです。ほとんど自明と思えるようなラベルであっても、厳密に一貫していない場合は、この達成基準を満たせないからです。不適合事例で上がっている例が、「検索」ボタンと「探す」ボタンが同様の機能を提供している場合（英語ではfindとsearchで説明されています）ですが、これはラベルが異なっているためにNGとなります。
+      同じ機能を提供するリンクやボタンなどはウェブページ一式の中で一貫している必要があります。不適合事例で上がっている例が、「検索」ボタンと「探す」ボタンが同様の機能を提供している場合（英語ではfindとsearchで説明されています）ですが、これはラベルが異なっているためにNGとなります。
       リンク先が同じでリンク文字列が異なる場合も注意の対象です（[G197]）。問い合わせページのリンク先が「問い合わせ」であったり「問い合わせフォーム」だったりすることは、NGです。
       また、ウェブページ一式のトップページへのリンクが「トップ」だったり、「トップページへ」だったり、サイト名だったりすることがあります。コンテンツ内でこういったリンク先の表記揺れは避けるようにしましょう。
       ページの上部にあるサイト名のaltを付与したロゴ画像がトップページのリンクになっていることは比較的よくある実装です。また、同時にパンくずのトップページへのリンクが、サイト名でないこともよくある実装です。解釈が揺れるところかもしれませんが、「サイト名ロゴをクリックするとトップページに行く」という機能の一貫性と、「パンくずでのTOPという文字がトップページに行く」という機能の一貫性が担保されていれば、この文字列が一致していなくてもよいと考えられます。「達成基準 3.2.4 を理解する」の「事例 3： 他のページへの一貫したリンクのラベル」を参照してください。
@@ -739,7 +733,7 @@ criterions:
     doc: |
       状況になんらかの変化を起こしうる操作は利用者によって全て制御可能になっていることが望ましいです。
       もし、なんらかの理由で、状況になんらかの変化を自動的に起こすような振る舞いがあったとしても、利用者に変化を伝え、利用者がその変化を止めることができるようにする必要があります。
-      リンクをクリックしたら、自動的に新しいタブ（ウィンドウ）を開くような実装をしてしまうと、利用者にとっては、自らの要求による変化でないので、NGになります。こういった実装が必要な場合は、あらかじめ「あたらしいタブを開くこと」を利用者に通知するようにしてください。
+      リンクをクリックしたら、自動的に新しいタブ（ウィンドウ）を開くような実装をしてしまうと、利用者にとっては、自らの要求による変化でないので、NGになります。こういった実装が必要な場合は、あらかじめ「新しいタブを開くこと」を利用者に通知するようにしてください。
 
   3-3-1: &c3-3-1
     code: 3-3-1
@@ -752,7 +746,6 @@ criterions:
       入力エラーが自動的に検出された場合は、エラーとなっている箇所が特定され、そのエラーが利用者にテキストで説明される。
     doc: |
       フォームに必須項目や所定の形式の値の入力を求める項目があり、ただしく入力されない限り送信を受け付けない場合は、利用者にわかりやすくエラーを表示するようにしてください。エラーを表示する際、たとえば入力されていない必須項目の背景色を変える<strong>だけ</strong>では、視覚障害者にとってエラーがわからないので、不十分です（これは色を変えてはいけない、ということは意味しません。色を明示することで晴眼者のユーザビリティは向上します）。また文章でエラーを説明する必要してください。
-      JavaScriptで、送信前にエラーチェックをしてしまうのもよいでしょう。
 
   3-3-2: &c3-3-2
     code: 3-3-2
@@ -764,11 +757,11 @@ criterions:
     summary: |
       コンテンツが利用者の入力を要求する場合は、ラベル又は説明文が提供されている。
     doc: |
-      利用者にフォームによる入力を求める際、どこに何を入力すべきなのか、わかりやすく情報提供してください。プログラムに解釈できる方法で提供することであればなおよい。具体的には<code>&lt;label&gt;</code>要素で各フォーム要素と関連付けることで、視覚障害者にとっても利用しやすいフォームを作ることができます。
+      利用者にフォームによる入力を求める際、どこに何を入力すべきなのか、わかりやすく情報提供してください。プログラムに解釈できる方法で提供することであればなおよいでしょう。具体的には<code>&lt;label&gt;</code>要素で各フォーム要素と関連付けることで、視覚障害者にとっても利用しやすいフォームを作ることができます。
       また、説明や入力の事例などの掲載も好ましいですが、やりすぎるとかえって邪魔になるので、簡潔にするようにしてください。
       必須項目がある場合は、なにが必須項目であるのか、わかりやすく情報提供してください。
       なお、説明文や入力時の例を書く際は、入力欄より前に記載しておく方が、線形的に情報取得しているスクリーンリーダの利用者にとって、間違いが少ないです。
-      ここで言われているラベル又は説明は、場合によっては、入力対象の付近で、可視状態であることを求めます。極端に画面を拡大している利用者にとっては、遠くにある説明文は読めない場合があります。
+      ここで言われているラベル又は説明は、入力対象の付近で、可視状態であることを求めます。極端に画面を拡大している利用者にとっては、遠くにある説明文は読めない場合があります。
 
   3-3-3: &c3-3-3
     code: 3-3-3
@@ -781,7 +774,7 @@ criterions:
       入力エラーが自動的に検出され、修正方法を提案できる場合、その提案が利用者に提示される。ただし、セキュリティ又はコンテンツの目的を損なう場合は除く。
     doc: |
       入力内容にエラーがある時、どのように訂正したらいいかを説明することが望ましいです。ただ、Understanding WCAG2.0の事例では、「月を入力してください」に対して「12」を入力したユーザに「Januaryと入力してください」という事例を挙げていますが、あまり良い例ではないでしょう。むしろ、半角英数字での入力を求めている箇所を、全角文字で入力している場合にエラーを出すとして、「アルファベット（a-Z）および数字（0-9）で入力してください」とする、というあたりを参考にすると良いでしょう（エラーを出さず、入力を受け付けてしまって、半角英数字に変換してしまう方が、利用者の手間は少なくなるのですが、こういった対応は場合によります）。
-      少々分かりづらいのが[3.3.1]との違いだが、[3.3.1]の主題はエラー箇所を明示することであって、エラーの修正方法を明示することではない点である。
+      少々分かりづらいのが[3.3.1]との違いです。[3.3.1]の主題はエラー箇所を明示することであって、エラーの修正方法を明示することではありません。
       また、[3.3.1]でも、本達成基準でも、エラー箇所へのリンクを付与することが望ましいとされています。
 
   3-3-4: &c3-3-4
@@ -793,7 +786,7 @@ criterions:
     summary: |
       利用者にとって法律行為もしくは金融取引が生じる、利用者が制御可能なデータストレージシステム上のデータを変更もしくは削除する、又は利用者が試験の解答を送信するウェブページでは、取消、チェック、確認のいずれかができるようにしてある。
     doc: |
-      「法的なもの」、「金融取引」、「試験」など、利用者の入力によって重大な損失を引き起こしうるようなフォームは、送信を取り消したり、送信前に確認画面を設ける必要があります。レベルAでも良いような気がするが、レベルAAです。
+      「法的なもの」、「金融取引」、「試験」など、利用者の入力によって重大な損失を引き起こしうるようなフォームは、送信を取り消したり、送信前に確認画面等を設ける必要があります。
 
   3-3-5: &c3-3-5
     code: 3-3-5
@@ -827,7 +820,7 @@ criterions:
       マークアップ言語を用いて実装されているコンテンツにおいては、要素には完全な開始タグ及び終了タグがあり、要素は仕様に準じて入れ子になっていて、要素には重複した属性がなく、どの ID も一意的である。ただし、仕様で認められているものを除く。
     doc: |
       ウェブコンテンツを記述するマークアップ（HTML）に誤りがないようにしてください。
-      このアクセシビリティチェッカーの解析以外にも<a href="https://validator.w3.org">Markup Validation Service</a>などを活用すると良いです。
+      このアクセシビリティチェッカーの解析以外にも<a href="https://validator.w3.org/nu/">Nu Html Checker</a>などを活用すると良いです。
 
   4-1-2: &c4-1-2
     code: 4-1-2
